@startuml
title Cenário sem Iterator

class Trabalhador {
  - nome: String
  + imprimir(): void
}

class ListaTrabalhadores {
  - trabalhadores: List<Trabalhador>
  + adicionar(Trabalhador): void
  + obter(int): Trabalhador
  + contar(): int
  + imprimirTodos(): void
}

class Main {
  + main(String[]): void
}

Main --> ListaTrabalhadores : usa
ListaTrabalhadores --> Trabalhador : contém

@enduml
